# LifeProject

./: .env  .env.example  .gitignore  README.md  pyproject.toml  test_api_endpoints.py  test_error_handling.py  test_project_hierarchy.py  test_recurring_items.py
alembic/: env.py
alembic/versions/: 3351b4752373_add_project_hierarchy_models.py  5ed197308e1d_add_recurring_items_chores_and_habits.py
app/: main.py
app/api/: auth.py  goals.py  habits.py  tasks.py
app/core/: config.py  database.py  database_utils.py  error_handlers.py  exceptions.py  security.py
app/models/: __init__.py  base.py  enums.py  recurring.py  user.py
app/repositories/: goal.py  habit.py  project.py  task.py
app/services/: time_allocation.py
backend/: .gitignore  main.py  pytest.ini  test_auth_system.py  test_recurring_items_final.py  test_recurring_items_simple.py
backend/app/api/: chores.py  goals.py  projects.py  tasks.py
backend/app/core/: auth.py  database.py
backend/app/models/: __init__.py  project.py
backend/app/repositories/: __init__.py  chore.py  goal.py  task.py
backend/tests/: test_database_connection.py
backend/tests/unit/: test_auth.py  test_enums.py  test_security.py
frontend/: package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  routeTree.gen.ts
frontend/src/components/auth/: LoginForm.tsx  ProtectedRoute.tsx  RegisterForm.tsx
frontend/src/components/calendar/: Calendar.tsx  CalendarEventComponent.tsx  CalendarFilters.tsx  CalendarPage.tsx  CalendarToolbar.tsx  CreateEventDialog.tsx  EventPopover.tsx  calendar.css
frontend/src/components/chores/: ChoreCard.tsx  ChoreForm.tsx  ChoreList.tsx
frontend/src/components/dashboard/: HabitStreaksWidget.tsx  ProjectProgressWidget.tsx  QuickActionsWidget.tsx  RecentActivityWidget.tsx  StatsCard.tsx  UpcomingDeadlinesWidget.tsx
frontend/src/components/goals/: GoalDetail.tsx  GoalForm.tsx  GoalList.tsx
frontend/src/components/habits/: HabitCard.tsx  HabitForm.tsx  HabitList.tsx
frontend/src/components/projects/: ProjectCard.tsx  ProjectDetail.tsx  ProjectForm.tsx  ProjectList.tsx
frontend/src/components/tasks/: TaskForm.tsx  TaskList.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: theme.ts
frontend/src/lib/api/: auth.ts  (+7 more)
frontend/src/routes/: .gitkeep  __root.tsx  calendar.tsx  chores.tsx  habits.tsx  index.tsx  login.tsx  projects.tsx  register.tsx
frontend/src/test/: setup.ts
frontend/src/types/: auth.ts  calendar.ts  dashboard.ts  project.ts  recurring.ts
tests/: conftest.py  test_database.py  test_main.py
tests/unit/: test_base_models.py  test_user_model.py
(+20 files in other folders)
